# blurt

./: .gitignore  LICENSE  README.md  blurt.plist.template  blurt.py  install.sh  make-app.sh  permissions.sh  pyproject.toml  release.sh  service.sh  setup.sh  uninstall.sh
Resources/: Blurt.icns
docs/superpowers/plans/: 2026-04-23-mic-and-hotkey-picker.md  2026-06-12-release-channels.md  2026-06-12-self-registering-permissions.md
docs/superpowers/specs/: 2026-04-23-mic-and-hotkey-picker-design.md  2026-05-27-self-update-design.md  2026-05-27-type-mode-hotkey-design.md  2026-06-02-type-clipboard-design.md  2026-06-04-meeting-recorder-design.md  2026-06-12-app-bundle-in-service-install-design.md  2026-06-12-release-channels-design.md  2026-06-12-self-registering-permissions-design.md  2026-06-12-uninstaller-design.md
tests/: test_config.py  test_emit.py  test_meeting.py  test_permissions.py  test_self_update.py
