[project]
name = "blurt"
version = "0.1.0"
description = "Push-to-talk local dictation for macOS (Parakeet-MLX)"
requires-python = ">=3.11"
dependencies = [
    "parakeet-mlx>=0.3.0",
    "sounddevice>=0.4.7",
    "soundfile>=0.12",
    "numpy>=1.26",
    "pynput>=1.7.7",
    "rumps>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
